exports[`test Renders datepicker with an error message without crashing 1`] = `
<div
  className="formGroup inline datePickerContainer ">
  
  <label
    className="controlLabel controlLabelError"
    htmlFor="date-picker">
    DatePicker
  </label>
  <div
    className="innerContainer">
    <Datepicker
      className="formControl formControlError"
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null} />
    
    <span
      className="error">
      <strong
        className="info">
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`test Renders datepicker without crashing 1`] = `
<div
  className="formGroup inline datePickerContainer ">
  
  <label
    className="controlLabel "
    htmlFor="date-picker">
    DatePicker
  </label>
  <div
    className="innerContainer">
    <Datepicker
      className="formControl "
      disabled={false}
      id="date-picker"
      name="date-picker"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      selected={null} />
    
  </div>
</div>
`;
